@@ -13,8 +13,8 @@ along with this software (see the LICENSE.md file). If not, see
 <http://creativecommons.org/publicdomain/zero/1.0/>.
 -->
 <entity-facade-xml type="install">
-    <moqui.screen.form.DbForm formId="UsaIrsW2_2015" purposeEnumId="DbfpTaxStatement"
-            description="USA IRS Form W-2 2015" printTemplateLocation="" printFontSize="9pt"
+    <moqui.screen.form.DbForm formId="UsaIrsW2" purposeEnumId="DbfpTaxStatement"
+            description="USA IRS Form W-2" printTemplateLocation="" printFontSize="9pt"
             printFontFamily="Courier, monospace" printContainerHeight="5.5in" printRepeatCount="3">
         <!-- see the mantle.humanres.PayrollServices.get#UsaIrsW2FormData service for data prep -->
         <!-- print coordinates are for the 8.5"x5.5" form -->
@@ -165,8 +165,8 @@ along with this software (see the LICENSE.md file). If not, see
             <moqui.screen.form.DbFormFieldAttribute attributeName="size" value="8"/></moqui.screen.form.DbFormField>
     </moqui.screen.form.DbForm>
 
-    <moqui.screen.form.DbForm formId="UsaIrs1099Misc_2015" purposeEnumId="DbfpTaxStatement"
-            description="USA IRS Form 1099-MISC 2015" printTemplateLocation="" printFontSize="9pt"
+    <moqui.screen.form.DbForm formId="UsaIrs1099Misc" purposeEnumId="DbfpTaxStatement"
+            description="USA IRS Form 1099-MISC" printTemplateLocation="" printFontSize="9pt"
             printFontFamily="Courier, monospace" printContainerHeight="5.5in" printRepeatCount="3">
         <!-- see the mantle.humanres.PayrollServices.get#UsaIrs1099MiscFormData service for data prep -->
         <!-- print coordinates are for the 8.5"x5.5" form -->
