@@ -671,72 +671,67 @@ along with this software (see the LICENSE.md file). If not, see
             <set field="allowanceDeductionAmount" from="0"/>
             <set field="allowanceExemptionAmount" from="0"/>
 
-            <if condition="!payrollAdjustment">
-                <entity-find-one entity-name="mantle.humanres.employment.PayrollAdjustment" value-field="payrollAdjustment"/></if>
+            <if condition="payrollAdjustment == null">
+                <entity-find-one entity-name="mantle.humanres.employment.PayrollAdjustment" value-field="payrollAdjustment" cache="true"/></if>
             <set field="garnishPriority" from="payrollAdjustment.garnishPriority"/>
-            <if condition="!employment">
+            <if condition="employment == null">
                 <entity-find-one entity-name="mantle.humanres.employment.EmploymentAndRelationship" value-field="employment"/></if>
-            <if condition="!emplPosition">
+            <if condition="emplPosition == null">
                 <entity-find-one entity-name="mantle.humanres.position.EmplPosition" value-field="emplPosition">
                     <field-map field-name="emplPositionId" from="employment.emplPositionId"/></entity-find-one>
             </if>
 
-            <if condition="emplPosition.exemptFlag == 'Y' &amp;&amp;
-                    (payrollAdjustment.isTax == 'Y' || payrollAdjustment.isSocialTax == 'Y' || payrollAdjustment.isMedicalTax == 'Y')">
-                <return/><!-- adjustmentApplies=false so adjustment won't be added -->
+            <!-- see if the employee is exempt from this adjustment -->
+            <entity-find-one entity-name="mantle.humanres.employment.PayrollAdjustmentExempt" value-field="paExempt" cache="true">
+                <field-map field-name="payrollAdjustmentId"/><field-map field-name="taxExemptEnumId" from="emplPosition.taxExemptEnumId"/></entity-find-one>
+            <if condition="paExempt != null">
+                <return/><!-- adjustmentApplies already set to false so adjustment won't be added by caller -->
             </if>
 
-            <if condition="payrollAdjustment.isTax == 'Y'">
-                <then>
-                    <set field="basisPayAmount" from="taxablePayAmount"/>
-                    <set field="ytdIncome" from="taxableYtdIncome"/>
-                </then>
-                <else-if condition="payrollAdjustment.isSocialTax == 'Y'">
-                    <set field="basisPayAmount" from="socialTaxablePayAmount"/>
-                    <set field="ytdIncome" from="socialTaxableYtdIncome"/>
-                </else-if>
-                <else-if condition="payrollAdjustment.isMedicalTax == 'Y'">
-                    <set field="basisPayAmount" from="medicalTaxablePayAmount"/>
-                    <set field="ytdIncome" from="medicalTaxableYtdIncome"/>
-                </else-if>
-                <else>
-                    <set field="basisPayAmount" from="payAmount"/>
-                    <set field="ytdIncome" from="payAmount"/>
-                </else>
-            </if>
+            <if condition="payrollAdjustment.isTax == 'Y'"><then>
+                <set field="basisPayAmount" from="taxablePayAmount"/>
+                <set field="ytdIncome" from="taxableYtdIncome"/>
+            </then><else-if condition="payrollAdjustment.isSocialTax == 'Y'">
+                <set field="basisPayAmount" from="socialTaxablePayAmount"/>
+                <set field="ytdIncome" from="socialTaxableYtdIncome"/>
+            </else-if><else-if condition="payrollAdjustment.isMedicalTax == 'Y'">
+                <set field="basisPayAmount" from="medicalTaxablePayAmount"/>
+                <set field="ytdIncome" from="medicalTaxableYtdIncome"/>
+            </else-if><else>
+                <set field="basisPayAmount" from="payAmount"/>
+                <set field="ytdIncome" from="payAmount"/>
+            </else></if>
 
-            <!-- check state and federal filing status constraints, if any; if there are but none match skip it -->
-            <entity-find entity-name="mantle.humanres.employment.PayrollAdjustmentFedStts" list="fedSttsList">
+            <!-- check state and federal filing status constraints, if any; if there are but none match skip the PayrollAdjustment -->
+            <entity-find entity-name="mantle.humanres.employment.PayrollAdjustmentFedStts" list="fedSttsList" cache="true">
                 <econdition field-name="payrollAdjustmentId"/></entity-find>
             <if condition="fedSttsList &amp;&amp; employment.taxFederalStatusEnumId">
-                <filter-map-list list="fedSttsList"><field-map field-name="taxFederalStatusEnumId" from="employment.taxFederalStatusEnumId"/></filter-map-list>
-                <if condition="!fedSttsList"><return/></if>
+                <filter-map-list list="fedSttsList" to-list="filteredFedSttsList">
+                    <field-map field-name="taxFederalStatusEnumId" from="employment.taxFederalStatusEnumId"/></filter-map-list>
+                <if condition="!filteredFedSttsList"><return/></if>
             </if>
-            <entity-find entity-name="mantle.humanres.employment.PayrollAdjustmentStateStts" list="stateSttsList">
+            <entity-find entity-name="mantle.humanres.employment.PayrollAdjustmentStateStts" list="stateSttsList" cache="true">
                 <econdition field-name="payrollAdjustmentId"/></entity-find>
             <if condition="stateSttsList &amp;&amp; employment.taxStateStatusEnumId">
-                <filter-map-list list="stateSttsList"><field-map field-name="taxStateStatusEnumId" from="employment.taxStateStatusEnumId"/></filter-map-list>
-                <if condition="!stateSttsList"><return/></if>
+                <filter-map-list list="stateSttsList" to-list="filteredStateSttsList">
+                    <field-map field-name="taxStateStatusEnumId" from="employment.taxStateStatusEnumId"/></filter-map-list>
+                <if condition="!filteredStateSttsList"><return/></if>
             </if>
 
             <if condition="payrollAdjustment.isTax == 'Y' || payrollAdjustment.isSocialTax == 'Y' || payrollAdjustment.isMedicalTax == 'Y'">
-                <entity-find-one entity-name="mantle.other.tax.TaxAuthority" value-field="taxAuthority">
+                <entity-find-one entity-name="mantle.other.tax.TaxAuthority" value-field="taxAuthority" cache="true">
                     <field-map field-name="taxAuthorityId" from="payrollAdjustment.taxAuthorityId"/></entity-find-one>
 
                 <!-- see if employee home is in jurisdiction, if not skip this adjustment (return); also set applicable taxAllowances -->
-                <if condition="taxAuthority.taxAuthorityTypeEnumId == 'TatFederal'">
-                    <then>
-                        <if condition="homePostalAddress.countryGeoId != taxAuthority.taxAuthGeoId"><return/></if>
-                        <set field="taxAllowances" from="employment.taxFederalAllowances"/>
-                    </then>
-                    <else-if condition="taxAuthority.taxAuthorityTypeEnumId == 'TatState'">
-                        <if condition="homePostalAddress.stateProvinceGeoId != taxAuthority.taxAuthGeoId"><return/></if>
-                        <set field="taxAllowances" from="employment.taxStateAllowances"/>
-                    </else-if>
-                    <else>
-                        <set field="taxAllowances" from="0"/>
-                    </else>
-                </if>
+                <if condition="taxAuthority.taxAuthorityTypeEnumId == 'TatFederal'"><then>
+                    <if condition="homePostalAddress.countryGeoId != taxAuthority.taxAuthGeoId"><return/></if>
+                    <set field="taxAllowances" from="employment.taxFederalAllowances"/>
+                </then><else-if condition="taxAuthority.taxAuthorityTypeEnumId == 'TatState'">
+                    <if condition="homePostalAddress.stateProvinceGeoId != taxAuthority.taxAuthGeoId"><return/></if>
+                    <set field="taxAllowances" from="employment.taxStateAllowances"/>
+                </else-if><else>
+                    <set field="taxAllowances" from="0"/>
+                </else></if>
 
                 <!-- Find applicable PayrollStdDeduction, subtract from basisPayAmount -->
                 <if condition="payrollAdjustment.applyStdDeduction == 'Y'">
@@ -961,9 +956,10 @@ along with this software (see the LICENSE.md file). If not, see
         </actions>
     </service>
 
-    <service verb="create" noun="PeriodWageAndTaxRecordsUsaIrs">
+    <service verb="create" noun="PeriodWageAndTaxRecords">
         <in-parameters>
             <parameter name="timePeriodId" required="true"><description>Should be a period for a Tax Year/Quarter/etc</description></parameter>
+            <parameter name="defaultTaxFormId" default-value="UsaIrsW2"/>
         </in-parameters>
         <actions>
             <!-- lock the TimePeriod, will close later -->
@@ -983,19 +979,19 @@ along with this software (see the LICENSE.md file). If not, see
                 <entity-find-one entity-name="mantle.humanres.position.EmplPosition" value-field="emplPosition">
                     <field-map field-name="emplPositionId" from="employment.emplPositionId"/></entity-find-one>
 
-                <!-- if position exemptFlag=Y call get#UsaIrs1099MiscFormData, else call get#UsaIrsW2FormData -->
-                <if condition="emplPosition.exemptFlag == 'Y'">
-                    <then>
-                        <service-call name="mantle.humanres.PayrollServices.get#UsaIrs1099MiscFormData"
-                                out-map="formOut" out-map-add-to-existing="false"
-                                in-map="[timePeriodId:timePeriodId, partyRelationshipId:employment.partyRelationshipId]"/>
-                    </then>
-                    <else>
-                        <service-call name="mantle.humanres.PayrollServices.get#UsaIrsW2FormData"
-                                out-map="formOut" out-map-add-to-existing="false"
-                                in-map="[timePeriodId:timePeriodId, partyRelationshipId:employment.partyRelationshipId]"/>
-                    </else>
-                </if>
+                <set field="curTaxFormId" from="employment.taxFormId ?: emplPosition.taxFormId ?: defaultTaxFormId"/>
+                <if condition="curTaxFormId == 'UsaIrs1099Misc'"><then>
+                    <service-call name="mantle.humanres.PayrollServices.get#UsaIrs1099MiscFormData"
+                            out-map="formOut" out-map-add-to-existing="false"
+                            in-map="[timePeriodId:timePeriodId, partyRelationshipId:employment.partyRelationshipId]"/>
+                </then><else-if condition="curTaxFormId == 'UsaIrsW2'">
+                    <service-call name="mantle.humanres.PayrollServices.get#UsaIrsW2FormData"
+                            out-map="formOut" out-map-add-to-existing="false"
+                            in-map="[timePeriodId:timePeriodId, partyRelationshipId:employment.partyRelationshipId]"/>
+                </else-if><else>
+                    <message>Not creating wage and tax statement for employee ${employment.fromPartyId} employment ${employment.partyRelationshipId}, no tax form set</message>
+                    <continue/>
+                </else></if>
 
                 <!-- save FormResponse -->
                 <service-call name="org.moqui.impl.ScreenServices.create#FormResponse" out-map="responseOut"
@@ -1023,7 +1019,7 @@ along with this software (see the LICENSE.md file). If not, see
         <implements service="mantle.humanres.PayrollServices.get#EmploymentWageAndTaxInfo"/>
         <in-parameters>
             <parameter name="federalTaxAuthorityId" default-value="UsaIrs"/>
-            <parameter name="formId" default-value="UsaIrsW2_2015"/>
+            <parameter name="formId" default-value="UsaIrsW2"/>
         </in-parameters>
         <out-parameters>
             <parameter name="federalTaxAuthorityId"/>
@@ -1085,7 +1081,7 @@ along with this software (see the LICENSE.md file). If not, see
         <implements service="mantle.humanres.PayrollServices.get#EmploymentWageAndTaxInfo"/>
         <in-parameters>
             <parameter name="federalTaxAuthorityId" default-value="UsaIrs"/>
-            <parameter name="formId" default-value="UsaIrs1099Misc_2015"/>
+            <parameter name="formId" default-value="UsaIrs1099Misc"/>
         </in-parameters>
         <out-parameters>
             <parameter name="federalTaxAuthorityId"/>
