@@ -165,7 +165,7 @@ along with this software (see the LICENSE.md file). If not, see
         </out-parameters>
         <actions>
             <!-- if no formMap at least get payer and recipient basic info -->
-            <if condition="!formMap &amp;&amp; formId == 'UsaIrs1099Misc_2015'">
+            <if condition="!formMap &amp;&amp; formId == 'UsaIrs1099Misc'">
                 <entity-find-one entity-name="mantle.party.time.TimePeriod" value-field="timePeriod"/>
                 <service-call name="mantle.other.TaxServices.get#UsaIrs1099MiscFormData" out-map="context"
                         in-map="[recipientPartyId:partyId, payerPartyId:timePeriod.partyId]"/>
@@ -193,7 +193,7 @@ along with this software (see the LICENSE.md file). If not, see
         <in-parameters>
             <parameter name="timePeriodId" required="true"/>
             <parameter name="taxAuthorityId" default-value="UsaIrs"/>
-            <parameter name="formId" default-value="UsaIrs1099Misc_2015"/>
+            <parameter name="formId" default-value="UsaIrs1099Misc"/>
             <parameter name="amountThreshold" type="BigDecimal" default="600"/>
         </in-parameters>
         <actions>
@@ -227,7 +227,7 @@ along with this software (see the LICENSE.md file). If not, see
             <parameter name="timePeriodId" required="true"/>
             <parameter name="partyId" required="true"><description>The vendor Party, ie matches Invoice.fromPartyId</description></parameter>
             <parameter name="taxAuthorityId" default-value="UsaIrs"/>
-            <parameter name="formId" default-value="UsaIrs1099Misc_2015"/>
+            <parameter name="formId" default-value="UsaIrs1099Misc"/>
         </in-parameters>
         <out-parameters>
             <parameter name="taxStatementId"/>
