@@ -35,6 +35,13 @@ New Features
   Finalized status so it may be modified before Finalize and GL posting
 - When Asset.quantityOnHandTotal goes below zero now does an automatic
   physical inventory found to get it back to zero
+- Service updates for UDM replacement of EmplPosition.exemptFlag by
+  taxExemptEnumId and taxFormId, and support for new
+  PayrollAdjustmentExempt entity
+- Changed create#PeriodWageAndTaxRecordsUsaIrs to
+  create#PeriodWageAndTaxRecords now that it handles tax forms more
+  generally with Employment.taxFormId, EmplPosition.taxFormId, and a new
+  defaultTaxFormId parameter
 
 Bug Fixes
 
